[package]
name = "risc0-js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
bincode = "1.3"
# risc0-zkvm = { version = "0.16", default-features = false, features = ["std"] }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", branch = "flaub/inner-receipt", features = ["std"], default-features = false }

