[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
bincode = "1.3.3"
bytemuck = "1.13.1"
methods = { path = "../methods" }
# risc0-zkvm = { version = "0.16.1" }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", branch = "flaub/inner-receipt" }
serde = "1.0"
