[package]
# TODO: Rename this package to change the method name from METHOD_NAME
name = "method_name"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
# risc0-zkvm = { version = "0.16.1", default-features = false }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", branch = "flaub/inner-receipt", default-features = false }
